--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,97 +1,214 @@
+/*
+Make HTML 5 elements display
+block-level for consistent styling
+*/
+
+header,
+section,
+footer,
+aside,
+nav,
+main,
+article,
+figure,
+figcaption {
+    display: block;
+}
+
+
+/*
+Prevent images and other objects
+from overflowing parent
+*/
+
+img,
+embed,
+object,
+video {
+    max-width: 100%;
+}
+
 body {
-  padding: 10px 50px 50px;
-  font: 18px "Garamond", serif;
+    padding: 10px 50px 50px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 22px;
+    background-color: #eceef3;
+    -webkit-font-smoothing: antialiased;
+    margin: 0;
+    padding: 0;
+}
+
+.center {
+    max-width: 960px;
+    margin: 0 auto;
 }
 
 a {
-  color: #019875;
-  text-decoration: none;
-  font-weight: bold;
-  transition: 0.4s;
+    color: #1f7fc4;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.4s;
 }
 
-  a:hover {
+a:hover {
     color: black;
-  }
-
-a.button, input[type=submit] {
-  color: white;
-  background: #019875;
-  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
-  padding: 10px 14px 12px;
-  font-size: 14px;
-  border-radius: 2px;
-  cursor: pointer;
 }
 
-form a.button, input[type=submit] {
-  margin-left: 140px;
-  transition: 0.4s;
+a.button,
+input[type=submit] {
+    color: white;
+    background: #1f7fc4;
+    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 10px 14px 12px;
+    font-size: 14px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+form a.button,
+input[type=submit] {
+    margin-left: 140px;
+    transition: 0.4s;
 }
 
 input[type=submit] {
-  border: 0;
+    border: 0;
 }
 
-  a.button:hover, input[type=submit]:hover {
-    background-color: #01b189;
-  }
+a.button:hover,
+input[type=submit]:hover {
+    background-color: #289ef1;
+}
 
 p {
-  margin: 20px auto;
+    margin: 20px auto;
 }
 
 ul {
-  padding: 0;
-  list-style-type: none;
-  margin-bottom: 10px;
-  line-height: 1.3em;
+    padding: 0;
+    list-style-type: none;
+    margin-bottom: 10px;
+    line-height: 1.3em;
+}
+
+h1 {
+    padding: 1rem 0;
 }
 
 h2 {
-  border-top: 2px solid #e7e7e7;
-  padding-top: 20px;
+    border-top: 2px solid #e7e7e7;
+    padding-top: 20px;
+}
+
+header {
+    background: rgb(247, 210, 1);
+    margin-bottom: 2rem;
+}
+
+table {
+    background: #fff;
+    padding: 2rem;
+    margin: 2rem 0 4rem 0;
+    box-shadow: 5px 5px 25px 0px rgba(46, 61, 73, 0.2);
+    overflow: hidden;
+    color: #333;
+    border-spacing: 0;
+    width: 100%;
 }
 
 th {
-  border-bottom: 2px solid #D8B493;
-  text-align: left;
-  padding: 5px 20px 5px 10px;
+    border-bottom: 2px solid rgb(247, 210, 1);
+    text-align: left;
+    padding: 5px 20px 5px 10px;
+    font-size: 28px;
 }
 
 tr {
-  min-height: 50px;
+    min-height: 50px;
 }
 
 tr:nth-child(2n) {
-  background: #E7E7E7;
+    background: #eceef3;
 }
 
 td {
-  padding: 5px 20px 5px 10px;
+    padding: 5px 20px 5px 10px;
 }
 
 label {
-  font-weight: bold;
-  min-width: 130px;
-  display: inline-block;
-  transition: 0.4s;
+    font-weight: bold;
+    min-width: 130px;
+    display: inline-block;
+    transition: 0.4s;
 }
 
 input {
-  padding: 10px;
-  font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  border-radius: 2px;
-  border-color: #E7E7E7;
-  transition: 0.4s;
+    padding: 10px;
+    font-family: "Lucida Grande", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    border-radius: 2px;
+    border-color: #E7E7E7;
+    transition: 0.4s;
+    border: 2px solid #ccc;
 }
 
 input[type=text] {
-  margin-left: 7px;
-  width: 300px;
+    margin-left: 7px;
+    width: 300px;
+}
+
+#delete {
+    background: #e64a1b;
+}
+
+a.button.cancel {
+    background: #7c7c7c;
 }
 
 .error {
-  color: rgb(236, 15, 15);
+    color: rgb(236, 15, 15);
+}
+
+
+/* GITHUB RIBBON */
+
+.github-ribbon {
+    border-bottom: 4px #f3c973 solid;
+    padding: 10px 40px 10px 15px;
+    z-index: 1000;
+    position: fixed;
+    right: -165px;
+    bottom: 5%;
+    font-family: sans-serif;
+    font-size: 2rem;
+    background-color: #000;
+    box-shadow: -15px 15px 25px 0px rgba(46, 61, 73, 0.2);
+    border-radius: 0.375rem;
+    overflow: hidden;
+    -webkit-transition: box-shadow 2s;
+    /* Safari */
+    transition: box-shadow 0.3s;
+    transition: right 0.7s;
+}
+
+.github-ribbon:hover {
+    box-shadow: 1px 1px 7px 0 rgba(46, 61, 73, 0.2);
+    right: -20px;
+}
+
+.github-ribbon a {
+    text-decoration: none;
+    color: #f4f5f4;
+    display: flex;
+    align-items: center;
+}
+
+.github-ribbon i {
+    display: block;
+}
+
+.github-ribbon span {
+    font-size: 1rem;
+    padding-left: 1rem;
+    display: block;
 }
